@@ -1141,15 +1141,6 @@ backsql_add( Operation *op, SlapReply *rs )
 		}
 	}
 
-	if ( get_assert( op ) &&
-		( test_filter( op, op->oq_add.rs_e, get_assertion( op ) )
-			!= LDAP_COMPARE_TRUE ) )
-	{
-		rs->sr_err = LDAP_ASSERTION_FAILED;
-		e = op->ora_e;
-		goto done;
-	}
-
 	/*
 	 * create_proc is executed; if expect_return is set, then
 	 * an output parameter is bound, which should contain 
@@ -1470,6 +1461,7 @@ done:;
 		SQLUSMALLINT	CompletionType = SQL_ROLLBACK;
 
 		if ( rs->sr_err == LDAP_SUCCESS && !op->o_noop ) {
+			assert( e == NULL );
 			CompletionType = SQL_COMMIT;
 		}
 
@@ -1513,6 +1505,10 @@ done:;
 		}
 	}
 #endif /* SLAP_ACL_HONOR_DISCLOSE */
+
+	if ( op->o_noop && rs->sr_err == LDAP_SUCCESS ) {
+		rs->sr_err = LDAP_X_NO_OPERATION;
+	}
 
 	send_ldap_result( op, rs );
 	slap_graduate_commit_csn( op );
