@@ -441,6 +441,7 @@ backsql_delete( Operation *op, SlapReply *rs )
 		SQLUSMALLINT	CompletionType = SQL_ROLLBACK;
 	
 		if ( rs->sr_err == LDAP_SUCCESS && !op->o_noop ) {
+			assert( e == NULL );
 			CompletionType = SQL_COMMIT;
 		}
 
@@ -463,6 +464,10 @@ done:;
 		}
 	}
 #endif /* SLAP_ACL_HONOR_DISCLOSE */
+
+	if ( op->o_noop && rs->sr_err == LDAP_SUCCESS ) {
+		rs->sr_err = LDAP_X_NO_OPERATION;
+	}
 
 	send_ldap_result( op, rs );
 
